[gd_scene load_steps=8 format=3 uid="uid://caivuw1yrylwx"]

[ext_resource type="Script" path="res://scripts/jelly_fish.gd" id="1_81y60"]
[ext_resource type="Texture2D" uid="uid://di8c5fdwbyqya" path="res://assets/Jellyfish.png" id="2_but73"]
[ext_resource type="Texture2D" uid="uid://dv2fc7qbqeci0" path="res://assets/light.png" id="3_07g1n"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6upv3"]
radius = 90.0
height = 560.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cgvgn"]
radius = 160.0
height = 556.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sogxw"]
size = Vector2(640, 240)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lu0k3"]
size = Vector2(629, 557)

[node name="jellyFish" type="StaticBody2D"]
collision_mask = 0
script = ExtResource("1_81y60")

[node name="jellyFishSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_but73")

[node name="jellyFishCol" type="CollisionShape2D" parent="."]
position = Vector2(0, -84)
rotation = -1.57079
shape = SubResource("CapsuleShape2D_6upv3")

[node name="jellyFishHurtBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="hurtBoxCol" type="CollisionShape2D" parent="jellyFishHurtBox"]
position = Vector2(0, 38)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_cgvgn")
debug_color = Color(0.974472, 0.160233, 3.85046e-07, 0.42)

[node name="jellyFishPushBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="pushCol" type="CollisionShape2D" parent="jellyFishPushBox"]
position = Vector2(0, -120)
shape = SubResource("RectangleShape2D_sogxw")
debug_color = Color(0.278551, 0.631575, 0, 0.42)

[node name="jellyDetectorArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="detectorCol" type="CollisionShape2D" parent="jellyDetectorArea"]
position = Vector2(-0.5, -478.5)
shape = SubResource("RectangleShape2D_lu0k3")

[node name="bubbleTimer" type="Timer" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -163)
energy = 0.5
texture = ExtResource("3_07g1n")
texture_scale = 0.7
